--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,16 @@
             <artifactId>selenium-support</artifactId>
             <version>3.141.59</version>
         </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+        </dependency>
 
     </dependencies>
 
