--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,7 @@
                     <version>2.20</version>
                     <configuration>
                         <suiteXmlFiles>
-                            <suiteXmlFile>src/test/testSuites/validatePaymentPage.xml
-                            </suiteXmlFile>
+                            <suiteXmlFile>src/test/testSuites/suite.xml</suiteXmlFile>
                         </suiteXmlFiles>
                     </configuration>
                 </plugin>
